# tree-sitter-firebase-security-rules

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-firebase-rules.pc.in  tree-sitter-firebase_rules.pc.in  tree-sitter-firebaserules.h  tree-sitter-firebaserules.pc.in
bindings/c/tree_sitter/: tree-sitter-firebase-rules.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_firebase_rules/: __init__.py  binding.c
bindings/python/tree_sitter_firebaserules/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/: storage.rules
test/corpus/: statements.txt
