[package]
name = "tree-sitter-firebase-rules"
description = "Firebase Security Rules Grammar"
version = "0.1.0"
authors = ["Chemis Techlabs <gcaldas@chemis.tech>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "firebase-rules"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/chemistechlabs/tree-sitter-firebase-security-rules"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
